# lsm6dso32_interface

./: CMakeLists.txt  README.md  package.xml
ros2/: CMakeLists.txt
ros2/config/: imu_visualization.rviz
ros2/include/ros2_wrapper/: imu_node.hpp
ros2/launch/: imu_visualization.launch.py
ros2/src/ros2_wrapper/: imu_node.cpp  imu_node_main.cpp
standalone/: CMakeLists.txt
standalone/examples/: test_imu.cpp
standalone/include/: lsm6dso32.hpp  registers.hpp
standalone/src/: lsm6dso32.cpp
